--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,17 @@
 /*====== Fonts ======*/
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 /*====== Variables ======*/
 :root {
-  --yellow: #EAC926;
+  --principal: #EAE0E1;
+  --secundario: #e8bec2;
   --dark-blue: #03264C;
   --light-blue: #1259c3;
   --gray: #666666;
   --light-gray: #ebebeb;
   --green: #39b54a;
-  --base-font-family: 'Roboto', sans-serif
 }
 
 
@@ -24,9 +25,11 @@ body {
   min-height: 100vh;
   margin: 0;
   font-size: 10px;
+  
 }
 
 body {
+  font-family: "Inria Serif", serif;
   font-family: var(--base-font-family);
   font-weight: 300;
   background-color: var(--light-gray);
@@ -68,7 +71,7 @@ hr {
 /*====== Main Header ======*/
 .main-header {
   padding: 15px 0;
-  background-color: var(--yellow);
+  background-color: var(--principal);
 }
 
 .main-header_home-link,
@@ -154,7 +157,7 @@ hr {
 
 /*====== Banner ======*/
 .banner {
-  background-image: url(/images/img-home-banner.jpg);
+  background-image: url(/images/banner.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -369,7 +372,7 @@ hr {
 }
 
 .buy-now-button {
-  background-color: var(--light-blue);
+  background-color: var(--secundario);
   font-size: 1.6em;
   color: #ffffff;
   padding: 15px;
@@ -470,11 +473,56 @@ textarea.form-input {
 }
 
 .btn{
+  padding: 10px 20px;
+  border-color: transparent;
+  border-radius: 4px;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+}
+
+.form-group{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+}
+
+.form-group.check{
+  display: flex;
+  flex-direction: row;
+
+}
+
+.form-group label{
+  font-size: 16px;
+  margin-bottom: 2px;
+}
+
+.form-group input{
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.form-group button{
   background-color: #1259c3;
   padding: 10px 20px;
   border-radius: 4px;
   color: #fff;
+  border: none;
+  cursor: pointer;
+
 }
+
+.btn-primary{
+  background-color: var(--secundario);
+  font-weight: bold;
+  width: 100%;
+}
+
+.btn-follow{
+  background-color: var(--secundario);
+}
+
 
 
 /*====== Media-Queries ======*/
