--- a/views/partials/headerLogeado.ejs
+++ b/views/partials/headerLogeado.ejs
@@ -3,11 +3,11 @@
         <div class="row align-items-center">
             <div class="col-5 col-md-2">
                 <a href="/index" class="main-header_home-link">
-                    <img src="/images/logo-mercado-liebre.svg">
+                    <img src="/images/logo.png">
                 </a>
             </div>	
             <div class="col-7 col-md-6">
-                <form action="" method="GET" class="search-form">
+                <form class="search-form">
                     <input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
                     <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
                 </form>
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li>
-                    <form action="" method="post">
+                    <form >
                         <button class="logout" type="submit">
                             Cerrar sesión <i class="fas fa-sign-in-alt"></i>
                         </button>
