cambios en el header y footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,8 +6,8 @@
                     <i class="fas fa-credit-card"></i>
                     <h2>Pagá con tarjeta o en efectivo</h2>
                     <p>
-                        Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
-                        efectivo en puntos de pago. ¡Y siempre es seguro!
+                        En TROP vas a poder encontrar promociones y cuotas sin interés
+                        con tarjeta de crédito.
                     </p>
                 </article>
             </div>
@@ -16,8 +16,8 @@
                     <i class="fas fa-gift"></i>
                     <h2>Envío gratis desde $ 1.999</h2>
                     <p>
-                        Solo por estar registrado en Mercado Liebre tenés envíos gratis
-                        en miles de productos. Es un beneficio de Mercado Puntos.
+                        Solo por estar registrado en TROP tenés envíos gratis
+                        en miles de productos. Es un beneficio de TROP Puntos.
                     </p>
                 </article>
             </div>
@@ -26,7 +26,7 @@
                     <i class="fas fa-user-shield"></i>
                     <h2>Seguridad, de principio a fin</h2>
                     <p>
-                        ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no
+                        ¿No te gusta? ¡Devolvelo! En TROP, no hay nada que no
                         puedas hacer, porque estás siempre protegido.
                     </p>
                 </article>
