cambios en objeto.js,index. ejs para pasar a pagina de ropa

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
             <h2 class="products-title">Registrate</h2>
           </div>
 
-          <form action="/register" method="POST" class="col-12">
+          <form class="form-register">
             <div class="form-group">
               <label for="name">Nombre</label>
               <input required type="text" class="form-control" id="name" name="name" placeholder="Ingresá tu nombre">
