--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 	<body>
 		<%- include('partials/header') %>
 			<div class="banner">
-				<img src="/images/img-home-banner.jpg" alt="Banner de ofertas">
+				<img src="/images/banner.png" alt="Banner de ofertas">
 			</div>
 			<div class="container products-wrapper">
 				<div class="row">
@@ -15,10 +15,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top1.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Alaska</h2>
 									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur,
 										adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
@@ -30,10 +30,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top2.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Ushuaia</h2>
 									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur,
 										adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
@@ -45,10 +45,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top3.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Rio</h2>
 									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur,
 										adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
@@ -60,10 +60,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top4.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Peru</h2>
 									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur,
 										adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
@@ -82,10 +82,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top5.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Jamaica</h2>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
 								</article>
@@ -96,10 +96,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top6.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Buenos Aires</h2>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
 								</article>
@@ -110,10 +110,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top7.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Miami</h2>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
 								</article>
@@ -124,10 +124,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top8.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Nueva York</h2>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
 								</article>
@@ -138,4 +138,3 @@
 			</div>
 			<%- include('partials/footer') %>
 	</body>
-</html>
