--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
           <div class="col-12">
             <h2 class="products-title">Ingresar</h2>
           </div>
-          <form action="/login" method="get" class="col-12 col-md-6">
+          <form   class="col-12 col-md-6">
             <div class="form-group">
               <label for="email">Email</label>
               <input type="email" name="email" id="email" class="form-control" required>
