--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,7 @@
 			<section class="info-usuario container products-wrapper">
 				<div class="row">
 					<div class="img-container offset-3 col-2">
-						<img src="<%= usuario.foto %>" alt="foto de perfil" class="foto-perfil">
+						<img src="/images/users/foto.png" alt="foto de perfil" class="foto-perfil">
 					</div>
 					<div class="data-container col-6">
 						<div class="d-flex align-items-center ">
@@ -40,10 +40,10 @@
 						<section class="product-box">
 							<a href="/product">
 								<figure class="product-box_image">
-									<img src="/images/products/default-image.png" alt="cafetera moulinex">
+									<img src="/images/products/top9.webp" alt="cafetera moulinex">
 								</figure>
 								<article class="product-box_data">
-									<h2>Nombre del producto</h2>
+									<h2>Thailandia</h2>
 									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur,
 										adipisicing elit. Eaque delectus ex</p>
 									<p>Comentarios: 12</p>
