--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-<%- include('partials/head') %>
+	<% include ./partials/head %>
 	<body>
-		<%- include('partials/headerLogueado') %>
+		<% include ./partials/headerLogeado %>
 			<section class="info-usuario container products-wrapper">
 				<div class="row">
 					<div class="img-container offset-3 col-2">
-						<img src="/images/users/foto.png" alt="foto de perfil" class="foto-perfil">
+						<img src="<%= usuario.foto %>" alt="foto de perfil" class="foto-perfil">
 					</div>
 					<div class="data-container col-6">
 						<div class="d-flex align-items-center ">
