--- a/views/product.ejs
+++ b/views/product.ejs
@@ -4,9 +4,11 @@
   <body>
     <%- include('partials/header') %>
       <div class="container products-wrapper">
-        <div class="d-flex align-items-center">
+  
+            <% for (let i = 0; i < producto.length; i++) { %>
+          <div class="d-flex align-items-center">
           <h2 class="products-title">
-            <%= producto[0].nombre %>
+              <%= producto[i].nombre %>
           </h2>
           <p class="product-detail-description">
             <a href="product-add.html">Editar</a>
@@ -15,22 +17,22 @@
         <div class="product-detail">
           <div class="row">
             <article class="col-12 col-lg-8 product-detail-info">
-              <img src="<%= producto[0].imagen %>" alt="" class="product-detail-img">
+              <img src="<%= producto[i].imagen %>" alt="" class="product-detail-img">
               <p class="product-detail-description">
-                <%= producto[0].descripcion %>
+                <%= producto[i].descripcion %>
               </p>
             </article>
             <div class="col-12 col-lg-4">
               <section class="comments">
                 <%for (let index=0; index < producto[0].comentarios.length; index++) {%>
                   <article>
-                    <img src=<%=producto[0].comentarios[index].imagen%> alt="">
+                    <img src=<%=producto[i].comentarios[index].imagen%> alt="">
                     <div class="data">
                       <p class="user">
                         <strong><a href="/users/profile">
-                            <%=producto[0].comentarios[index].nombre%>
+                            <%=producto[i].comentarios[index].nombre%>
                           </a></strong>
-                        <%= producto[0].comentarios[index].comentario%>
+                        <%= producto[i].comentarios[index].comentario%>
                       </p>
                     </div>
                   </article>
