--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,47 +1,83 @@
 <!DOCTYPE html>
 <html lang="es">
-<%- include('partials/head') %>
+  <%- include('partials/head') %>
   <body>
     <%- include('partials/header') %>
-      <div class="container products-wrapper">
-        <div class="row">
-          <div class="col-12">
-            <h2 class="products-title">Registrate</h2>
-          </div>
-
-          <form class="form-register">
-            <div class="form-group">
-              <label for="name">Nombre</label>
-              <input required type="text" class="form-control" id="name" name="name" placeholder="Ingresá tu nombre">
-            </div>
-            <div class="form-group">
-              <label for="email">Correo electrónico</label>
-              <input required type="email" class="form-control" id="email" name="email"
-                placeholder="Ingresá tu correo electrónico">
-            </div>
-            <div class="form-group">
-              <label for="password">Contraseña</label>
-              <input required type="password" class="form-control" id="password" name="password"
-                placeholder="Ingresá tu contraseña">
-            </div>
-            <div class="form-group">
-              <label for="birth-date">Fecha de nacimiento</label>
-              <input required type="date" class="form-control" id="birth-date" name="password" placeholder="birth-date">
-            </div>
-            <div class="form-group">
-              <label for="doc">Nro de Documento</label>
-              <input required type="number" class="form-control" id="doc" name="doc"
-                placeholder="Ingresá tu número de documento">
-            </div>
-            <div class="form-group">
-              <label for="pic">Foto de Perfil</label>
-              <input required type="text" class="form-control" id="pic" name="pic"
-                placeholder='Ingresá la URL de tu foto de perfil'>
-            </div>
-            <button type="submit" class="btn btn-primary">Registrarse</button>
-          </form>
+    <div class="container products-wrapper">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="products-title">Registrate</h2>
         </div>
+
+        <form class="form-register" method="POST" action="/register/store">
+          <div class="form-group">
+            <label for="name">Nombre de usuario</label>
+            <input
+              required
+              type="text"
+              class="form-control"
+              id="name"
+              name="name"
+              placeholder="Ingresá tu nombre de usuario"
+            />
+          </div>
+          <div class="form-group">
+            <label for="email">Correo electrónico</label>
+            <input
+              required
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              placeholder="Ingresá tu correo electrónico"
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input
+              required
+              minlength="4"
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="Ingresá tu contraseña"
+            />
+          </div>
+          <div class="form-group">
+            <label for="birth-date">Fecha de nacimiento</label>
+            <input
+              type="date"
+              class="form-control"
+              id="birthDate"
+              name="birthDate"
+              placeholder="birth-date"
+            />
+          </div>
+          <div class="form-group">
+            <label for="doc">Nro de Documento</label>
+            <input
+              type="number"
+              class="form-control"
+              id="dni"
+              name="dni"
+              placeholder="Ingresá tu número de documento"
+            />
+          </div>
+          <div class="form-group">
+            <label for="pic">Foto de Perfil</label>
+            <input
+              type="text"
+              class="form-control"
+              id="foto"
+              name="foto"
+              placeholder="Ingresá la URL de tu foto de perfil"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary">Registrarse</button>
+        </form>
       </div>
-      <%- include('partials/footer') %>
+    </div>
+    <%- include('partials/footer') %>
   </body>
 </html>
