--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,16 +11,33 @@
           <form   class="col-12 col-md-6">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" name="email" id="email" class="form-control" required>
+              <input
+              required 
+              minlength="4"
+              type="email" 
+              name="email" 
+              id="email" 
+              class="form-control"  
+              minlength="4">
             </div>
             <div class="form-group">
               <label for="password">Contraseña</label>
-              <input type="password" name="password" id="password" class="form-control" required>
+              <input 
+              required
+              minlength="4"
+              type="password" 
+              name="password" 
+              id="password" 
+              class="form-control"  >
             </div>
             <div class="form-group">
               <label for="remember">Recordarme</label>
-              <input type="checkbox" name="remember" value="true">
-            </div>
+              <input 
+              type="checkbox" 
+              name="remember" 
+              id="remember" v
+              alue="false"  
+              /> </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
           </form>
         </div>
