--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,3 @@
-
 <header class="main-header">
   <div class="container">
     <div class="row align-items-center">
@@ -8,12 +7,18 @@
         </a>
       </div>
       <div class="col-7 col-md-6">
-        <form class="search-form">
+        <form
+          class="search-form"
+          method="post"
+          action="/product/search-results"
+        >
           <input
             type="text"
             name="search"
             placeholder="Buscar productos, marcas y más"
             class="search-form_input"
+            required
+            minlength="4"
           />
           <button type="submit" class="search-form_button">
             <i class="fas fa-search"></i>
@@ -34,16 +39,37 @@
       <ul class="left-navbar">
         <li><a href="/">Todos los productos</a></li>
       </ul>
+      <% if (usuario) { %>
       <ul class="right-navbar">
         <li>
-          <a href="/register"
-            >Creá tu cuenta <i class="far fa-address-card"></i>
+          <a href="/profile">
+            <i class="fas fa-user"></i>
+            <%= usuario.usuario %>
           </a>
         </li>
         <li>
-          <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+          <a href="/logout">
+            <i class="fas fa-sign-out-alt"></i>
+            Cerrar sesión
+          </a>
         </li>
       </ul>
+      <% } else { %>
+      <ul class="right-navbar">
+        <li>
+          <a href="/login">
+            <i class="fas fa-sign-in-alt"></i>
+            Iniciar sesión
+          </a>
+        </li>
+        <li>
+          <a href="/register">
+            <i class="fas fa-user-plus"></i>
+            Registrarse
+          </a>
+        </li>
+      </ul>
+      <% } %>
     </nav>
   </div>
 </header>
