--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,57 +2,65 @@
 <html lang="es">
 	<% include ./partials/head %>
 	<body>
-		<% include ./partials/headerLogeado %>
+		<% if(locals.usuario != undefined) { %>
+		<%- include('./partials/headerLogueado.ejs') %>
+		<% } else { %>
+			<%- include('./partials/header.ejs') %>
+			<% } %>
 			<section class="info-usuario container products-wrapper">
 				<div class="row">
 					<div class="img-container offset-3 col-2">
-						<img src="<%= usuario.foto %>" alt="foto de perfil" class="foto-perfil">
+						<img src="<%= usuario.photo %>" alt="foto de perfil" class="foto-perfil">
 					</div>
 					<div class="data-container col-6">
 						<div class="d-flex align-items-center ">
 							<h1 class="main-title">
-								<%= usuario.usuario %>
-									<a href="/profile-edit">
-										<i class="fas fa-cog"></i>
-									</a>
-							</h1>
-							<a class="btn mt-3 ml-4" href="">SEGUIR</a>
-						</div>
-						<p>
-							<%= usuario.email %>
-						</p>
-						<div>
-							<ul class="">
-								<li>8 productos</li>
-								<li>200 seguidores</li>
-								<li>300 comentarios</li>
-							</ul>
-						</div>
-					</div>
-				</div>
+								<% if(idUsuario == datosUsuario.id) { %>
+									<h1 class="main-title"> <%= datosUsuario.username %>
+									
+									
+				
+										<a href="/profileEdit/">
+											<i class="fas fa-cog"></i>
+										</a>
+									</h1>
+										<% } else { %>
+				
+											<h1 class="main-title"> <%= datosUsuario.username %> </h1>
+											<% } %>
+								
 			</section>
 			<div class="container products-wrapper">
 				<div class="row">
 					<div class="col-12">
-						<h2 class="products-title">Mis productos</h2>
+						<h2 class="products-title">Mis productos: <%=datosUsuario.productos.length %></h2>
+						<p>Ordenados del más al menos reciente</p>
 					</div>
 					<div class="col-12 col-sm-6 col-lg-3">
-						<section class="product-box">
-							<a href="/product">
+					<section class="bloque">
+						<% if (datosUsuario.productos.length > 0) { %>
+
+							<% for (let i = datosUsuario.productos.length - 1; i >= 0; i--) { %>	<div class="col-12 col-sm-6 col-lg-3">
+						
+								<section class="product-box">
+									<a href="/productos/detalle/id/<%=datosUsuario.productos[i].id%>">
 								<figure class="product-box_image">
-									<img src="/images/products/top9.webp" alt="cafetera moulinex">
+									<img src="<%= datosUsuario.productos[i].photo %" alt="<%= datosUsuario.productos[i].nombreproducto %>">									
 								</figure>
-								<article class="product-box_data">
-									<h2>Thailandia</h2>
-									<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur,
-										adipisicing elit. Eaque delectus ex</p>
-									<p>Comentarios: 12</p>
-								</article>
-							</a>
-						</section>
-					</div>					
+
+								<a href= "/productos/detalle/id/<%=datosUsuario.productos[i].id%>">
+									<article class="product-box_data">
+										<h2> <%= datosUsuario.productos[i].producto%> </h2>
+									</article>
+								</a>
+							</section>
+						</div>
+						<% } %>
+					<% } %>				
 				</div>
-			</div>			
+			</div>	
+		</section>
+
 			<%- include('partials/footer') %>
 	</body>
 </html>
