--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,12 +39,12 @@
       <ul class="left-navbar">
         <li><a href="/">Todos los productos</a></li>
       </ul>
-      <% if (Usuario) { %>
+      <% if (usuario) { %>
       <ul class="right-navbar">
         <li>
           <a href="/profile">
             <i class="fas fa-user"></i>
-            <%= Usuario.Usuario %>
+            <%= usuario %>
           </a>
         </li>
         <li>
