--- a/views/product.ejs
+++ b/views/product.ejs
@@ -2,24 +2,47 @@
 <html lang="es">
 <%- include('partials/head') %>
   <body>
-    <%- include('partials/header') %>
-      <div class="container products-wrapper">
+    <% if(locals.user !=undefined) { %>
+      <%- include('./partials/headerLogaeado.ejs') %>
+        <% } else { %>
+          <%- include('./partials/header.ejs') %>
+            <% } %>
 
-          <% for (let i = 0; i < producto.length; i++) { %>
+      <div class="container products-wrapper">
           <div class="d-flex align-items-center">
           <h2 class="products-title">
-              <%= producto[i].nombre %>
+            <%=datosdelproducto.nombredelproducto%>
+
+            <% if(idUsuario == datosdelproducto.usuario.id) { %>
+              
           </h2>
+         
+          <a href="/profile/<%=datosproducto.usuario.nombre%>">
+            <h3 class="product-detail-description"></p>
+            <%=datosproducto.usuario.nombre%>
+
           <p class="product-detail-description">
             <a href="product-add.html">Editar</a>
           </p>
         </div>
+
         <div class="product-detail">
           <div class="row">
             <article class="col-12 col-lg-8 product-detail-info">
-              <img src="<%= producto[i].imagen %>" alt="" class="product-detail-img">
+              <img src="<%=datosproducto.imagenes%>" alt="" class="product-detail-img">
               <p class="product-detail-description">
-                <%= producto[i].descripcion %>
+                <%=datosproducto.descripcion%>
+              </p>
+              <% if(idUsuario == datosproducto.usuario.id) { %>
+
+              <form action="/products/delete/<%=datosproducto.id%>" method="post" >
+                <button type="submit" >
+                  <i class="fas fa-trash"></i> Eliminar Producto
+                </button>
+                </form>
+                  <% } %>
+            </article>
+                
               </p>
             </article>
             <div class="col-12 col-lg-4">
