--- a/views/product-edit.ejs
+++ b/views/product-edit.ejs
@@ -2,11 +2,11 @@
 <html lang="es">
 <%- include('partials/head') %>
   <body>
-    <% if(locals.user !=undefined) { %>
-      <%- include('./partials/headerLogaeado.ejs') %>
-        <% } else { %>
-          <%- include('./partials/header.ejs') %>
-            <% } %>
+    <% if(locals.user != undefined) { %>
+      <%- include('./partials/headerLogeado.ejs') %>
+  <% } else { %>
+     <%- include('./partials/header.ejs') %>
+  <% } %>
 
 <div class="container products-wrapper">
 	<div class="row">
