--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -8,38 +8,38 @@
 					<div class="col-12">
 						<h2 class="products-title">Editar mi perfil</h2>
 					</div>
-					<form action="/register" method="POST" class="col-12">
+					<form action="/profileEdit/" method="POST" class="col-12">
 						<div class="form-group">
 							<label for="name">Nombre</label>
 							<input required type="text" class="form-control" id="name" name="name"
-								placeholder="Ingresá tu nombre">
+								placeholder="<%=locals.usuarrios.nombre %>" class = "registroinput">">
 						</div>
 						<div class="form-group">
 							<label for="email">Correo electrónico</label>
 							<input required type="email" class="form-control" id="email" name="email"
-								placeholder="Ingresá tu correo electrónico">
+								placeholder="<%=locals.usuarios.email %>" class = "registroinput">
 						</div>
 						<div class="form-group">
 							<label for="password">Contraseña</label>
 							<input required type="password" class="form-control" id="password" name="password"
-								placeholder="Ingresá tu contraseña">
+								placeholder="locals.usuarios.password" class = "registroinput" >
 						</div>
 						<div class="form-group">
 							<label for="birth-date">Fecha de nacimiento</label>
 							<input required type="date" class="form-control" id="birth-date" name="password"
-								placeholder="birth-date">
+								placeholder="locals.usuarios.date" class = "registroinput">
 						</div>
 						<div class="form-group">
 							<label for="doc">Nro de Documento</label>
 							<input required type="number" class="form-control" id="doc" name="doc"
-								placeholder="Ingresá tu número de documento">
+								placeholder="locals.usuarios.dni" class = "registroinput">
 						</div>
 						<div class="form-group">
 							<label for="pic">Foto de Perfil</label>
 							<input required type="text" class="form-control" id="pic" name="pic"
-								placeholder='Ingresá la URL de tu foto de perfil'>
+								placeholder="locals.usuarios.photo" class = "registroinput">
 						</div>
-						<button type="submit" class="btn btn-primary">Registrarse</button>
+						<button type="submit" class="btn btn-primary">Confirmar cambios</button>
 					</form>
 				</div>
 			</div>
