--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@ figure {
 }
 
 img {
-  width: 100%;
+  height: 160px;
 }
 
 input,
@@ -182,7 +182,7 @@ hr {
   border-radius: 5px;
   overflow: hidden;
   transition: 300ms;
-  margin: 20px 0;
+  margin: 20px 20px;
 }
 
 .product-box a {
@@ -523,7 +523,11 @@ textarea.form-input {
   background-color: var(--secundario);
 }
 
-
+#productos {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 
 /*====== Media-Queries ======*/
 @media (min-width: 768px) {
