--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,20 +6,10 @@
           <img src="/images/logo.png" />
         </a>
       </div>
-      <div class="col-7 col-md-6">
-        <form
-          class="search-form"
-          method="post"
-          action="/product/search-results"
-        >
-          <input
-            type="text"
-            name="search"
-            placeholder="Buscar productos, marcas y más"
-            class="search-form_input"
-            required
-            minlength="4"
-          />
+      <div class="col-12">
+        <form class="search-form" method="post" action="/product/search-results">
+          <input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input"
+            required minlength="4" />
           <button type="submit" class="search-form_button">
             <i class="fas fa-search"></i>
           </button>
@@ -40,36 +30,36 @@
         <li><a href="/">Todos los productos</a></li>
       </ul>
       <% if (usuario) { %>
-      <ul class="right-navbar">
-        <li>
-          <a href="/profile">
-            <i class="fas fa-user"></i>
-            <%= usuario %>
-          </a>
-        </li>
-        <li>
-          <a href="/logout">
-            <i class="fas fa-sign-out-alt"></i>
-            Cerrar sesión
-          </a>
-        </li>
-      </ul>
-      <% } else { %>
-      <ul class="right-navbar">
-        <li>
-          <a href="/login">
-            <i class="fas fa-sign-in-alt"></i>
-            Iniciar sesión
-          </a>
-        </li>
-        <li>
-          <a href="/register">
-            <i class="fas fa-user-plus"></i>
-            Registrarse
-          </a>
-        </li>
-      </ul>
-      <% } %>
+        <ul class="right-navbar">
+          <li>
+            <a href="/profile">
+              <i class="fas fa-user"></i>
+              <%= usuario.name %>
+            </a>
+          </li>
+          <li>
+            <a href="/logout">
+              <i class="fas fa-sign-out-alt"></i>
+              Cerrar sesión
+            </a>
+          </li>
+        </ul>
+        <% } else { %>
+          <ul class="right-navbar">
+            <li>
+              <a href="/login">
+                <i class="fas fa-sign-in-alt"></i>
+                Iniciar sesión
+              </a>
+            </li>
+            <li>
+              <a href="/register">
+                <i class="fas fa-user-plus"></i>
+                Registrarse
+              </a>
+            </li>
+          </ul>
+          <% } %>
     </nav>
   </div>
 </header>
