cambios para que ande LOG-IN, cambios de terminal, cambios de varias paginas porque no conectaban

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,9 +31,8 @@
       </ul>
       <ul class="right-navbar">
         <li>
-          <a href="/login">
-            <i class="fas fa-sign-in-alt"></i>
-            Iniciar sesión
+          <a href="/login"> Iniciar sesión <i class="fas fa-sign-in-alt"></i>
+            
           </a>
         </li>
         <li>
