--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -4,7 +4,7 @@
             <img src="/images/logo.png">
         </a>
     </div>	
-    <div class="col-7 col-md-6">
+    <div class="col-12">
         <form class="search-form">
             <input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
             <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
