cambios necesarios devuelta, login, producto controller , serch results

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
                 <br><br><br><br><br>
                 <h2 class="products-title">Ingresar</h2>
             </div>
-            <form action="/login" method="POST" class=""> 
+            <form class="col-12 col-md-6" action="/login/store" method="POST" class=""> 
                 <% if(locals.errors){ %> 
                     <p class="error"><%= errors.message %></p>
                 <% } %>
