--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -4,11 +4,45 @@
             <img src="/images/logo.png">
         </a>
     </div>	
+
+    <div class="col-7 col-md-6">
+        <form action="/search-results" method="GET" class="search-form">
+            <input type="text" name="search" placeholder="Buscar productos" class="search-form_input">
+            <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
+        </form>
+    </div>
+    <div class="col-7 col-md-6">
+        <form action="/search-results/users" method="GET" class="search-form">
+            <input type="text" name="search" placeholder="Buscar usuarios" class="search-form_input">
+            <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
+        </form>
+    </div>
+
+
     <div class="col-12">
         <form class="search-form">
             <input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
+            <a class="title"> TROP</a>
             <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
         </form>
+        <nav class="main-navbar">
+            <ul class="left-navbar">
+                <li><a href="/">Todos los productos</a></li>
+                <li><a href="/products/add">Cargar productos</a></li>
+            </ul>
+
+            <ul class="right-navbar">
+                <li><a href="/profile/<%= locals.usuarios.nombre %>">
+                    <p>Hola, <%= locals.usuarios.nombre %> <i class="fas fa-user"></i> </p>
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="right-navbar">
+                <li><a href="/profileEdit/">Editar perfil <i class="fas fa-sign-in-alt"></i></a>
+                </li>	
+            </ul>
+            
 
             </a>
         </li>
