--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
 <%- include('partials/head') %>
-  <body>
-    <% if(locals.user != undefined) { %>
-      <%- include('./partials/headerLogueado.ejs') %>
+<body>
+  <% if(locals.user != undefined) { %>
+    <%- include('./partials/headerLogueado.ejs') %>
   <% } else { %>
-     <%- include('./partials/header.ejs') %>
+    <%- include('./partials/header.ejs') %>
   <% } %>
-      <div class="container products-wrapper">
+  <div class="container products-wrapper">
+    <div class="row">
+      <div class="col-12">
+        <h2 class="products-title">Resultados de búsqueda que coincidan: Ordenados del más reciente al menos</h2>
+        <% if (lista.length === 0) { %>
+          <p>No hay resultados para su criterio de búsqueda.</p>
+        <% } else { %>
         <div class="row">
-          <div class="col-12">
-            <h2 class="products-title">Resultados de búsqueda que coincidan: Ordenados del mas reciente al menos</h2>
-			<% if (products.length === 0) { %>
-				<p>No hay resultados para su criterio de búsqueda.</p>
-			<% } else { %>
-          </div class="row">
-		  <% for (let i = 0; i < products.length; i++) { %>
-			<img src="<%= products[i].photo %>" class="card-img-top" alt="<%= products[i].producto %>">
+          <% for (let i = 0; i < lista.length; i++) { %>
+            <div class="card col-4">
+              <img src="<%= lista[i].photo %>" class="card-img-top" alt="<%= lista[i].nombre %>">
               <div class="card-body">
-                <h5 class="card-title"><%= products[i].producto %></h5>
-                <p class="card-text"><strong>Descripción:</strong> <%= products[i].descripcion %></p>
+                <h5 class="card-title"><%= lista[i].nombre %></h5>
+                <p class="card-text"><strong>Descripción:</strong> <%= lista[i].descripcion %></p>
                 <p class="card-text"><strong>Usuario:</strong> 
-					<a href="/profile/<%= products[i].usuario.nombre %>">
-						<%= products[i].usuario.nombre %></a></p>
-                <a href="/products/detalle/id/<%= products[i].id %>" class="btn btn-primary">Ver Detalle</a>
-
-				</div>
-						
-				<%} %>
-  			</div>
-			<% } else {%> 
-      
+                  <a href="/profile/<%= lista[i].usuario.nombre %>">
+                    <%= lista[i].usuario.nombre %>
+                  </a>
+                </p>
+                <a href="/products/detalle/id/<%= lista[i].id %>" class="btn btn-primary">Ver Detalle</a>
+              </div>
+            </div>
+          <% } %>
+        </div>
+        <% } %>
       </div>
-      <%- include('partials/footer')%>
-  </body>
+    </div>
+  </div>
+  <%- include('partials/footer') %>
+</body>
 </html>
+
