--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
                 <label for="password">Contraseña</label>
                 <input required minlength="4" type="password" name="password" id="password" class="form-control">
                 <!-- Middlewars:  				
-                  <% if (locals.errors && errors.email) { %>
+                  <% if (locals.errors && errors.password) { %>
                   <div class="error-msg">
                     <%= errors.password.msg %>                                
                           
