--- a/views/product-edit.ejs
+++ b/views/product-edit.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 <%- include('partials/head') %>
   <body>
-    <% if(locals.user != undefined) { %>
+    <% if(locals.usuarios != undefined) { %>
       <%- include('./partials/headerLogeado.ejs') %>
   <% } else { %>
      <%- include('./partials/header.ejs') %>
