--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -2,7 +2,11 @@
 <html lang="es">
 <%- include('partials/head') %>
 	<body>
-		<%- include('partials/headerLogueado') %>
+		<% if(locals.usuarios != undefined) { %>
+			<%- include('./partials/headerLogeado.ejs') %>
+		<% } else { %>
+		   <%- include('./partials/header.ejs') %>
+		<% } %>
 			<div class="container products-wrapper">
 				<div class="row">
 					<div class="col-12">
