--- a/views/product.ejs
+++ b/views/product.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 <%- include('partials/head') %>
   <body>
-    <% if(locals.user !=undefined) { %>
+    <% if(locals.usuarios !=undefined) { %>
       <%- include('./partials/headerLogaeado.ejs') %>
         <% } else { %>
           <%- include('./partials/header.ejs') %>
@@ -11,15 +11,15 @@
       <div class="container products-wrapper">
           <div class="d-flex align-items-center">
           <h2 class="products-title">
-            <%=datosdelproducto.nombredelproducto%>
+            <%=producto.producto%>
 
-            <% if(idUsuario == datosdelproducto.usuario.id) { %>
+            <% if(locals.usuarios.id == producto.usuarios.id) { %>
               
           </h2>
          
-          <a href="/profile/<%=datosproducto.usuario.nombre%>">
+          <a href="/profile/<%=datosproducto.usuarios.nombre%>">
             <h3 class="product-detail-description"></p>
-            <%=datosproducto.usuario.nombre%>
+            <%=datosproducto.usuarios.nombre%>
 
           <p class="product-detail-description">
             <a href="product-add.html">Editar</a>
