--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 	<% include ./partials/head %>
 	<body>
-		<% if(locals.usuario != undefined) { %>
+		<% if(locals.usuarrios != undefined) { %>
 		<%- include('./partials/headerLogueado.ejs') %>
 		<% } else { %>
 			<%- include('./partials/header.ejs') %>
