--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 	<% include('./partials/head') %>
 
 		<body>
-			<% if(locals.usuarios !=undefined) { %>
+			<% if(typeof usuarios !== 'undefined') { %>
 				<%- include('./partials/headerLogueado.ejs') %>
 					<% } else { %>
 						<%- include('./partials/header.ejs') %>
@@ -11,7 +11,7 @@
 								<section class="info-usuario container products-wrapper">
 									<div class="row">
 										<div class="img-container offset-3 col-2">
-											<img src="<%= usuario.photo %>" alt="foto de perfil" class="foto-perfil">
+											<img src="<%= datosUsuario.photo %>" alt="foto de perfil" class="foto-perfil">
 										</div>
 										<div class="data-container col-6">
 											<div class="d-flex align-items-center ">
